--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Tabula is tool for recording and analysing command line sessions. 
+Tabula is a tool for recording and analysing command line sessions. 
 
-At a basic level, it's quite similar to the Unix 'script' tool. However, rather than just recording everything that's typed or displayed, it tries to capture much more meaningful information about the actions that are being performed. It explicitly captures commands that are run, whether they succeed or not, the directory and environment they were run in, and the input and output consumed and produced.
+At a basic level, it's quite similar to the Unix 'script' tool, but rather than just recording everything that's typed or displayed, tabula tries to capture much more meaningful information about the actions that are being performed. It explicitly captures commands that are run and whether they were successful or not, the directory and environment they were run in, and the input and output consumed and produced.
 
 In the future, tabula will support a centralised collection system that allows people on multiple hosts, or multiple terminals on the same machine, to be be recorded in a single place and provide an overview of all the work that was done on a project.
 
